# openpbso

./: .gitignore  CMakeLists.txt  ModeData.h  README.md  Run
tools/: real_time_modal_sound.cpp  render_fields.cpp
